# Blender-Soft-Rod

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  3rodbr2_write.blend  3rodbr2_write2.blend  3rodbr2_write2.blend1  Error-Comparison(In Progress)  L1 Error.ipynb  L2 Error.ipynb  Makefile  README.md  load_write_blender.py  open_blend_file.py  practice.py  pyproject.toml  save_as_blend_file.py
.github/workflows/: main.yml
Blender/: 1_arm_sim_varied_radii.py  3_arm_sim_from_data.py  3_rod_br2_data.npz  3rodbr2.blend1  3rodbr2.py  Rod_simulation.blend  Rod_simulation.blend1  SimulationFromBR2Data.py  Three_Dimensional_Blender_Arm_Motion.blend  Three_Dimensional_Motion_Classes_Updated  Three_Dimensional_Motion_Classes_Updated.py  Three_Dimensional_Soft_Arm_Motion.py  br2_data.npz  rod_sim.py
Projectile Motion/: Projectile Motion (-ky - bv).py  Projectile Motion (-ky) as a gravity.py  Projectile Motion Final.py  ProjectileMotionFormula.py
VR/: README.md
VR/client/: app.css  app.js  index.html
VR/client/app/: config.js  create_app.js  session_bindings.js  state.js
VR/client/entities/meshes/: mesh_entity_manager.js
VR/client/entities/rod/: arm_geometry.js
VR/client/entities/spectators/: arm_camera_controller.js  spectator_avatar_manager.js
VR/client/input/: xr_input.js
VR/client/math/: matrix3.js  quaternions.js  se3.js  so3.js
VR/client/modes/: modes_registry.js
VR/scripts/: start_server.sh
docs/: conf.py  index.rst
docs/VR/: intro.md
docs/_templates/: layout.html
docs/api/: collective.rst  file.rst  geometry-composite.rst  geometry.rst
docs/api/bsr/: blender_commands.rst  blender_frame_manager.rst  geometry-primitives.rst
docs/api/virtual_field/: backend.rst  commands.rst  runtime_common_utilities.rst  state.rst
docs/cli/: data_converter.rst
docs/custom_elastica/: growing_arm.md
docs/tutorial/: elastica.rst
docs/virtual_field/: adding_character.md  common_utility.md  communication_scheme.md  dual_arm_assets.md  dual_arm_inputs.md  dual_arm_overview.md  intro.md  octo_arm_overview.md
examples/: README.md  camera_movement.py  director_demo.py  elastica-timoshenko.py  pendelum.py  pendulum.py  pose_demo.py  projectile_motion.py  rigid_rod_oscillatory.py  single_rigid_rod_spring_action.py  single_rigid_rod_spring_action_3D.py  timoshenko.py
examples/br2/: br2_pushed.py  callbacks.py
src/bsr/: __init__.py  _camera.py  _light.py  camera.py  collections.py  deck.py  file.py  frame.py  geometry.py  light.py  macros.py  mixin.py  protocol.py  rod.py  stack.py  typing.py  viewport.py
src/bsr/blender/: __init__.py
src/bsr/blender_commands/: file.py  macros.py
src/bsr/geometry/: __init__.py  protocol.py
src/bsr/geometry/composite/: pose.py  rod.py  stack.py
src/bsr/geometry/primitives/: pipe.py  simple.py  utils.py
src/bsr/tools/: action_compat.py  keyframe_mixin.py  protocol.py
src/bsr/utilities/: singleton.py
src/elastica_blender/: __init__.py  rod_callback.py
src/elastica_blender/converter/: npz2blend.py
src/virtual_field/: __init__.py
src/virtual_field/core/: __init__.py  commands.py  interfaces.py  mapping.py  state.py
src/virtual_field/runtime/: cathy_foraging_simulation.py  cathy_throw_simulation.py  coomm_octopus_simulation.py  mesh_assets.py  mode_base.py  mode_registry.py  noel_c4_simulation.py  octo_waypoint_simulation.py  orientation.py  sim_backends.py  spirobs_simulation.py  two_cr_simulation.py  two_gcr_simulation.py
src/virtual_field/runtime/custom_elastica/: boundary_conditions.py  contacts.py  control.py  dissipation.py  forcing.py
src/virtual_field/runtime/custom_elastica/mesh/: __init__.py  mesh_contact_utils.py  mesh_surface.py  rod_mesh_surface_contact.py  sphere_mesh_surface_contact.py
src/virtual_field/runtime/custom_elastica/rods/: growing_cr.py
src/virtual_field/runtime/foraging_elastica/: __init__.py  contacts.py  crawling.py  forcing.py
src/virtual_field/runtime/spirob_elastica/: constraints.py  geometry.py  sdf_objects.py  spirob.py
src/virtual_field/server/: __init__.py  app.py  backends.py  schema.py  teleop.py
tests/: test_blender_mesh_interface.py  test_cylinder_update.py  test_file_handling.py  test_frame.py  test_load_bpy_singleton.py  test_sphere_update.py
tests/backend_integration/: test_server_smoke_backend_integration.py
tests/blender_commands/: test_file_handling.py
tests/bsr/: test_version_check.py
tests/bsr/elastica_blender/: test_npz2blend.py
tests/bsr/geometry/: test_blender_mesh_interface.py  test_cylinder_update.py  test_primitive_geometry_mesh.py  test_spline_primitives.py
tests/bsr/utilities/: test_singleton.py
tests/elastica_blender/: test_npz2blend.py
tests/geometry/: test_interface_keyframe_setting.py  test_primitive_geometry_mesh.py  test_primitive_pipe_mesh.py  test_sphere_update.py  test_spline_primitives.py  utils.py
tests/geometry/stack/: test_base_stack_stacking.py  test_stack_properties.py
tests/stack/: test_base_stack_stacking.py  test_stack_properties.py
tests/utilities/: test_singleton.py
tests/virtual_field/: conftest.py
tests/virtual_field/behavior/runtime/: test_noel_c4_behavior.py
tests/virtual_field/equations/runtime/: test_cathy_throw_forces_equations.py  test_mesh_contact_grid_equations.py  test_noel_c4_sdf_equations.py  test_noel_c4_sdf_hash_equations.py
tests/virtual_field/modules/core/: test_commands_mapping_modules.py  test_dual_arm_profile_modules.py  test_imports_modules.py  test_state_models_modules.py
tests/virtual_field/modules/runtime/: test_mode_base_modules.py
tests/virtual_field/modules/server_logic/: test_backends_modules.py  test_schema_modules.py  test_server_app_modules.py
