# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "BlenderSoftRod"
version = "0.1.0"
description = "Blender integration tools for soft-rod system."
readme = "README.md"
authors = []
license = "MIT"
keywords = ["data-analysis"]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

# ...
packages = [
    { include = "bsr", from = "src" },
    { include = "elastica_blender", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pytest = "^8.2.1"
pytest-mock = "^3.14.0"
codecov = "^2.1.13"
black = "^24.4.2"
